--- a/app/src/main/res/layout/activity_show_qr.xml
+++ b/app/src/main/res/layout/activity_show_qr.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -10,9 +10,11 @@
         tools:context="org.walleth.activities.ViewTransactionActivity">
 
     <android.support.design.widget.TextInputLayout
+
+            style="@style/password_textinputlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <android.support.v7.widget.AppCompatEditText
+        <android.support.design.widget.TextInputEditText
                 android:inputType="textPassword"
                 android:id="@+id/password_input"
                 android:hint="Export password"
