--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,7 @@
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">48dp</item>
     </style>
+    <style name="password_textinputlayout">
+        <item name="passwordToggleEnabled">true</item>
+    </style>
 </resources>
