Add confirmation for export password - closes #34

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#C99D66</color>
     <color name="colorPrimaryDark">#3C3C3D</color>
     <color name="colorAccent">#69F0AE</color>
+
+    <color name="warning">#ffff4444</color>
 </resources>
