--- a/app/src/main/res/layout/activity_show_qr.xml
+++ b/app/src/main/res/layout/activity_show_qr.xml
@@ -7,10 +7,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
+        android:animateLayoutChanges="true"
         tools:context="org.walleth.activities.ViewTransactionActivity">
 
     <android.support.design.widget.TextInputLayout
-
             style="@style/password_textinputlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -21,6 +21,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+            style="@style/password_textinputlayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputEditText
+                android:inputType="textPassword"
+                android:id="@+id/password_input_confirmation"
+                android:hint="Confirm export password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <LinearLayout
+            android:id="@+id/confirmation_warning"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <android.support.v7.widget.AppCompatImageView
+                app:srcCompat="@drawable/ic_warning_24dp"
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <TextView
+                android:text="Confirmation does not match Password"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <android.support.v7.widget.AppCompatImageView
+                app:srcCompat="@drawable/ic_warning_24dp"
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
     <android.support.v7.widget.SwitchCompat
             android:text="show QR-Code"
             android:id="@+id/show_qr_switch"
