--- a/app/src/main/res/layout/activity_account_create.xml
+++ b/app/src/main/res/layout/activity_account_create.xml
@@ -1,82 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/activity_main"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="org.walleth.activities.MainActivity">
+        tools:context="org.walleth.activities.CreateAccountActivity">
 
-    <android.support.design.widget.TextInputLayout
-            android:padding="16dp"
-            android:id="@+id/name_input_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-                android:id="@+id/nameInput"
-                android:hint="@string/input_hint_account_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-    </android.support.design.widget.TextInputLayout>
-
-
-    <android.support.design.widget.TextInputLayout
-            android:padding="16dp"
-            android:id="@+id/note_input_container"
-            android:layout_below="@+id/name_input_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-                android:hint="@string/input_hint_notes"
-                android:id="@+id/noteInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-    </android.support.design.widget.TextInputLayout>
-
-    <LinearLayout
-            android:layout_below="@+id/note_input_container"
-            android:id="@+id/address_container"
-            android:padding="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputLayout
-                android:id="@+id/hex_input_container"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+    <ScrollView android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputEditText
-                    android:id="@+id/hexInput"
-                    android:hint="@string/input_hint_address"
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputLayout
+                    android:padding="16dp"
+                    android:id="@+id/name_input_container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </android.support.design.widget.TextInputLayout>
-        <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/camera_button"
-                app:srcCompat="@drawable/ic_image_camera_alt"
-                android:layout_gravity="center_vertical"
-                style="@style/button"/>
-        <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/new_address_button"
-                app:srcCompat="@drawable/ic_vpn_key_black_24dp"
-                android:layout_gravity="center_vertical"
-                style="@style/button"/>
-    </LinearLayout>
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                        android:id="@+id/nameInput"
+                        android:hint="@string/input_hint_account_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </android.support.design.widget.TextInputLayout>
 
-    <CheckBox
-            android:layout_margin="16dp"
-            android:layout_below="@id/address_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/notify_checkbox"
-            android:text="Notify on changes"/>
 
+            <android.support.design.widget.TextInputLayout
+                    android:padding="16dp"
+                    android:id="@+id/note_input_container"
+                    android:layout_below="@+id/name_input_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                        android:hint="@string/input_hint_notes"
+                        android:id="@+id/noteInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                    android:layout_below="@+id/note_input_container"
+                    android:id="@+id/address_container"
+                    android:padding="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                        android:id="@+id/hex_input_container"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                            android:id="@+id/hexInput"
+                            android:hint="@string/input_hint_address"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                </android.support.design.widget.TextInputLayout>
+                <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/camera_button"
+                        app:srcCompat="@drawable/ic_image_camera_alt"
+                        android:layout_gravity="center_vertical"
+                        style="@style/button"/>
+                <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/new_address_button"
+                        app:srcCompat="@drawable/ic_vpn_key_black_24dp"
+                        android:layout_gravity="center_vertical"
+                        style="@style/button"/>
+            </LinearLayout>
+
+            <CheckBox
+                    android:layout_margin="16dp"
+                    android:layout_below="@id/address_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/notify_checkbox"
+                    android:text="Notify on changes"/>
+        </LinearLayout>
+    </ScrollView>
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_margin="16dp"
             app:srcCompat="@drawable/ic_action_done"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_gravity="bottom|right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+</FrameLayout>
