--- a/app/src/main/res/layout/activity_trezor.xml
+++ b/app/src/main/res/layout/activity_trezor.xml
@@ -15,9 +15,13 @@
             android:layout_height="128dp"/>
 
     <TextView
+            android:id="@+id/trezor_status_text"
             android:text="Please connect your TREZOR"
             android:layout_below="@id/trezor_connect_indicator"
             android:layout_centerHorizontal="true"
+            android:fontFamily="sans-serif"
+            android:textSize="18dp"
+            android:gravity="center_horizontal"
             android:padding="32dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
