--- a/app/src/main/res/layout/pinput.xml
+++ b/app/src/main/res/layout/pinput.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:padding="16dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
@@ -11,7 +11,7 @@
             android:id="@+id/pin_grid"
             android:rowCount="3"
             android:columnCount="3"
-
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     <LinearLayout
