--- a/app/src/main/res/layout/item_address_book.xml
+++ b/app/src/main/res/layout/item_address_book.xml
@@ -12,9 +12,8 @@
             android:layout_gravity="top|right"
             android:padding="8dp"
             android:id="@+id/key_indicator"
-            app:srcCompat="@drawable/ic_vpn_key_black_24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
 
     <LinearLayout
             android:layout_width="wrap_content"
