--- a/app/src/main/res/layout/activity_import_json.xml
+++ b/app/src/main/res/layout/activity_import_json.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_main"
@@ -9,82 +9,89 @@
         android:animateLayoutChanges="true"
         tools:context="org.walleth.activities.ImportActivity">
 
-
-    <android.support.design.widget.TextInputLayout
-            android:id="@+id/account_name_container"
+    <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-                android:id="@+id/account_name"
+        <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:fontFamily="sans-serif"
-                android:hint="@string/key_import_account_name_input_hint"
-                android:textSize="16sp"
-                android:padding="16dp"/>
-    </android.support.design.widget.TextInputLayout>
+                android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputLayout
+                    android:id="@+id/account_name_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                        android:id="@+id/account_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:fontFamily="sans-serif"
+                        android:hint="@string/key_import_account_name_input_hint"
+                        android:textSize="16sp"
+                        android:padding="16dp"/>
+            </android.support.design.widget.TextInputLayout>
 
 
-    <RadioGroup android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/key_type_select"
-                android:layout_below="@id/account_name_container">
+            <RadioGroup android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:id="@+id/key_type_select"
+                        android:layout_below="@id/account_name_container">
 
-        <RadioButton android:layout_width="wrap_content"
-                     android:id="@+id/type_json_select"
-                     android:layout_height="wrap_content"
-                     android:text="JSON"/>
+                <RadioButton android:layout_width="wrap_content"
+                             android:id="@+id/type_json_select"
+                             android:layout_height="wrap_content"
+                             android:text="JSON"/>
 
-        <RadioButton android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:id="@+id/type_ecdsa_select"
-                     android:text="ECDSA"/>
+                <RadioButton android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:id="@+id/type_ecdsa_select"
+                             android:text="ECDSA"/>
 
-    </RadioGroup>
+            </RadioGroup>
 
-    <android.support.design.widget.TextInputLayout
-            android:id="@+id/password_container"
-            android:layout_below="@id/key_type_select"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-                android:id="@+id/password"
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:fontFamily="sans-serif"
-                android:hint="@string/key_import_password_input_hint"
-                android:textSize="16sp"
-                android:padding="16dp"/>
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                    android:id="@+id/password_container"
+                    android:layout_below="@id/key_type_select"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                        android:id="@+id/password"
+                        android:inputType="textPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:fontFamily="sans-serif"
+                        android:hint="@string/key_import_password_input_hint"
+                        android:textSize="16sp"
+                        android:padding="16dp"/>
+            </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-            android:layout_below="@id/password_container"
+            <android.support.design.widget.TextInputLayout
+                    android:layout_below="@id/password_container"
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
-                android:id="@+id/key_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:fontFamily="sans-serif"
-                android:hint="@string/key_input_key_hint"
-                android:textSize="16sp"
-                android:padding="16dp"/>
-    </android.support.design.widget.TextInputLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputEditText
+                        android:id="@+id/key_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:fontFamily="sans-serif"
+                        android:hint="@string/key_input_key_hint"
+                        android:textSize="16sp"
+                        android:padding="16dp"/>
+            </android.support.design.widget.TextInputLayout>
 
+        </RelativeLayout>
+    </ScrollView>
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_margin="16dp"
             app:srcCompat="@drawable/ic_action_done"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_gravity="bottom|right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+</FrameLayout>
