--- a/app/src/main/res/layout/activity_import_json.xml
+++ b/app/src/main/res/layout/activity_import_json.xml
@@ -52,6 +52,7 @@
 
             <android.support.design.widget.TextInputLayout
                     android:id="@+id/password_container"
+                    style="@style/password_textinputlayout"
                     android:layout_below="@id/key_type_select"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
